...

import UIKit

class PasswordTextField: CustomTextField {
    // MARK: - Initializer
    override init() {
        super.init(placeholder: "Password")
        self.isSecureTextEntry = true
    }
    
    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }
...
