...
//

import UIKit

class ListMessageCell : UITableViewCell {
    // MARK: - Properties
    let profileImageView = CircleImageView(imageName: "user")
    let nameLabel = CustomLabel(text: "Name", textColor: .black, textSize: 20, textWeight: .bold)
    let chatLabel = CustomLabel(text: "Chat", textColor: .black, textSize: 18, textWeight: .regular)
    
    // MARK: - Initializer
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
         super.init(style: .default, reuseIdentifier: reuseIdentifier)
...
